--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_REACT_APP_API_URL=https://api2.project-ca.com/api
+VITE_REACT_APP_API_URL=https://api-gateway.project-ca.com/api
 default=113030820230001
