--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-VITE_REACT_APP_API_URL=https://api-gateway.project-ca.com/api
-default=113030820230001
-VITE_REACT_APP_PI_EVULATION_API_URL=https://teacher.project-ca.com/api
+VITE_REACT_APP_API_URL=https://api2.project-ca.com/api
+VITE_REACT_APP_PI_EVULATION_API_URL=https://teacher2.project-ca.com/api
