--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_REACT_APP_API_URL=https://api.project-ca.com/api
+default=113030820230001
 VITE_REACT_APP_PI_EVULATION_API_URL=https://master.project-ca.com/api
