--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^5.4.5",
     "sweetalert2": "^11.10.0"
   },
   "devDependencies": {
