--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.14",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "html-to-image": "^1.11.11",
@@ -21,7 +22,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-loader-spinner": "^5.4.5",
-    "sweetalert2": "^11.10.0"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
